Address comments
Signed-off-by: wenqimou <452787782@qq.com>